# libxbrl

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
