[package]
name = "libxbrl"
version = "0.1.0"
authors = ["Austin Matherne <AustinMatherne@ProtonMail.ch>"]
edition = "2021"
description = "XBRL processor"
repository = "https://github.com/AustinMatherne/libxbrl/"
license = "MIT OR Apache-2.0"
keywords = ["xbrl"]
categories = ["finance", "parser-implementation"]

[dependencies]
